--- a/diceStyle.css
+++ b/diceStyle.css
@@ -5,6 +5,13 @@ body {
     justify-content: center;
     align-items: center;
 }
+.main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: #d72424;
+}
 .newgame{
     width: 200px;
     height: 200px;
@@ -71,6 +78,7 @@ body {
   font-size: 0.95rem;
   font-weight: 600;
   cursor: pointer;
-  transition: transform 0.15s, box-shadow 0.15s;
-  margin: 6px 0;
+  transform: translateX(-2.1rem)
+  /* transition: transform 0.15s, box-shadow 0.15s; */
+  /* margin: 6px 0; */
 }
